# gradiompy

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
integrate/: __init__.py  _quadrature.py
interpolate/: __init__.py  _cubic.py  _polyint.py
src/gradiompy/integrate/: __init__.py  _quadrature.py
src/gradiompy/interpolate/: __init__.py  _cubic.py  _polyint.py
