[project]
name = "Gradiompy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.14.1",
]
[tool.uv]
source-directories = ["src"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

 [tool.hatch.build.targets.wheel]
      packages = ["src/gradiompy"]   
